<resources>
    <string name="app_name">Easy Learning</string>
    <string name="electrostatic_field">Elektrostatisches Feld</string>
    <string name="electrical_flow_field">Elektrisches Strömungsfeld</string>
    <string name="electrical_network">Elektrisches Netzwerk</string>
    <string name="stationary_magnetic_field">Stationäres Magnetfeld</string>
    <string name="time_varying_electromagnetic_field">Zeitlich veränderliches elektromagnetisches Feld</string>
    <string name="next">weiter</string>
    <string name="submit">bestätigen</string>
    <string name="try_again">nochmal versuchen</string>
    <string name="right">RICHTIG</string>
    <string name="wrong">FALSCH</string>
    <string name="STRING_TOKEN_SPLITTER">;</string>
</resources>
