<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.easylearning.easylearning.MainActivity">

        <Button
            android:id="@+id/button_electrostatic_field"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/main_topic_button"
            android:onClick="sendMessageElectrostaticField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/electrostatic_field"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/button_electrical_flow_field"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/main_topic_button"
            android:onClick="sendMessageElectricalFlowField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/electrical_flow_field"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/button_electrical_network"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/main_topic_button"
            android:onClick="sendMessageElectricalNetwork" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/electrical_network"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/button_stationary_magnetic_field"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/main_topic_button"
            android:onClick="sendMessageStationaryMagneticField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/stationary_magnetic_field"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/button_time_varying_electromagnetic_field"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/main_topic_button"
            android:onClick="sendMessageElectromagneticField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/time_varying_electromagnetic_field"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </LinearLayout>
</ScrollView>
