<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_lesson_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.easylearning.easylearning.LessonQuizActivity">

    <io.github.kexanie.library.MathView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/mathview_lesson_quiz"
        android:textSize="16sp"
        auto:engine="MathJax"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ll_answers"
        android:layout_centerInParent="true">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroup">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="U=R*I"
            android:layout_margin="16dp"/>

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="U=R/I"
            android:layout_margin="16dp"/>

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="U=I/R"
            android:layout_margin="16dp"/>

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I=R*U"
            android:layout_margin="16dp"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <io.github.kexanie.library.MathView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mathview_answer_1"
            auto:engine="MathJax"
            android:layout_margin="16dp"/>

        <io.github.kexanie.library.MathView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mathview_answer_2"
            auto:engine="MathJax"
            android:layout_margin="16dp"/>

        <io.github.kexanie.library.MathView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mathview_answer_3"
            auto:engine="MathJax"
            android:layout_margin="16dp"/>

        <io.github.kexanie.library.MathView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mathview_answer_4"
            auto:engine="MathJax"
            android:layout_margin="16dp"/>

    </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textview_answer_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_answers"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="invisible"/>


    <Button
        android:id="@+id/button_lesson_quiz_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="sendMessageLessonQuizSubmit"
        android:text="@string/submit" />

    <Button
        android:id="@+id/button_lesson_quiz_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="sendMessageLessonQuizTryAgain"
        android:text="@string/try_again"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button_lesson_quiz_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="sendMessageLessonQuizNext"
        android:text="@string/next"
        android:visibility="invisible"/>

</RelativeLayout>
